--- a/main.html
+++ b/main.html
@@ -2,12 +2,21 @@
 
 <html>
   <head>
+	  <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+	   <title>Voting Eligibility</title>
     <link rel="stylesheet" href="styles.css" />
+	  
   </head>
 
   <body>
     <!-- write the body here -->
-
+      <div class="container">
+        <h2>Check Voting Eligibility</h2>
+        <input type="text" id="name" placeholder="Enter your name">
+        <input type="number" id="age" placeholder="Enter your age">
+        <button id="btn">Submit</button>
+    </div>
     <script type="text/javascript" src="./script.js"></script>
   </body>
 </html>
